--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@smastrom/react-rating": "^1.5.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7"
