--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "firebase": "^10.12.2",
     "mailersend": "^2.2.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
